# daily-sales-etl-test

./: .dockerignore  .env.sample  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/config/: db.py  logger.py
app/core/: etl.py
app/data/raw/: daily_sales.csv
